--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
     .image-hover-wrapper:hover img.back {
       opacity: 0;
     }
-
+     .marquee {
+      background-color: #000;
+      color: #fff;
+      font-weight: bold;
+      padding: 5px 0;
+      text-align: center;
+      font-size: 1.1rem;
+    }
 
   </style>
 </head>
@@ -72,7 +79,8 @@
       </div>
     </div>
   </nav>
-
+  
+  <div class="marquee">🚚 Free Shipping All Over India!</div>
   <!-- Banner Image -->
   <div>
     <img src="assets/image/Not Just Tees. It’s a Statement..png" alt="Banner" class="img-fluid w-100" style="max-height: 5500px; object-fit: cover;">
@@ -420,7 +428,40 @@
               <a href="#order" onclick="addToCart('friendsXtalwinder Tee', 999)" class="btn btn-dark">Add to Cart</a>
             </div>
           </div>
-        </div>   
+        </div>  
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="assets/image/eagle glory.jpeg" class="card-img-top" alt="eagle glory Tee">
+          <div class="card-body">
+            <h5 class="card-title">eagle glory Tee</h5>
+            <p class="card-text">Declare your freedom in style. The “Threadnova Glory” tee features a majestic bald eagle soaring before a retro American flag, embodying power, pride, and self-expression. With rich earthy tones and vintage textures, this design pays tribute to bold spirits who live by their own rules.</p>
+            <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+            <a href="#order" onclick="addToCart('eagle glory Tee', 999)" class="btn btn-dark">Add to Cart</a>
+          </div>
+        </div>
+      </div> 
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="assets/image/outer chaos.jpeg" class="card-img-top" alt="outer chaos Tee">
+          <div class="card-body">
+            <h5 class="card-title">outer chaos v/s inner peace Tee</h5>
+            <p class="card-text">Escape the noise and find your calm. The “Outer Chaos” tee features a serene, meditative character surrounded by modern-day stress symbols—emails, deadlines, money, and chaos—all contrasted by an aura of inner peace. With its vibrant neon palette and bold back graphic, this piece is perfect for those who stay grounded in a hectic world.</p>
+            <p><span class="text-decoration-line-through text-muted">₹1899</span> <span class="fw-bold ms-2">₹899</span></p>
+            <a href="#order" onclick="addToCart('outer chaos Tee', 899)" class="btn btn-dark">Add to Cart</a>
+          </div>
+        </div>
+      </div> 
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="assets/image/outrun the past.jpeg" class="card-img-top" alt="outrun the past Tee">
+          <div class="card-body">
+            <h5 class="card-title">outrun the past Tee</h5>
+            <p class="card-text">Leave the past behind and shift into gear. The “Outrun the Past” tee features a retro-futuristic muscle car speeding into a dreamy sunset—symbolizing progress, motion, and freedom. With vintage hues and an 80s-inspired synthwave aesthetic, it’s designed for the bold dreamer who never looks back.</p>
+            <p><span class="text-decoration-line-through text-muted">₹1899</span> <span class="fw-bold ms-2">₹899</span></p>
+            <a href="#order" onclick="addToCart('outrun the past Tee', 899)" class="btn btn-dark">Add to Cart</a>
+          </div>
+        </div>
+      </div>   
     
     </div>
     </div>
