--- a/index.html
+++ b/index.html
@@ -461,6 +461,72 @@
             <a href="#order" onclick="addToCart('outrun the past Tee', 899)" class="btn btn-dark">Add to Cart</a>
           </div>
         </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="assets/image/throne.jpg" class="card-img-top" alt="throne Tee">
+          <div class="card-body">
+            <h5 class="card-title">throne Tee</h5>
+            <p class="card-text">Step into your power with the Throne Tee. This premium black t-shirt features a bold gothic design with intricate spiked wings and a radiant star detail — a perfect fusion of edge and elegance. Designed for those who lead from the shadows.</p>
+            <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+            <a href="#order" onclick="addToCart('throne Tee', 999)" class="btn btn-dark">Add to Cart</a>
+          </div>
+        </div>
+      </div> 
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="assets/image/fly.jpg" class="card-img-top" alt="fly Tee">
+          <div class="card-body">
+            <h5 class="card-title">fly Tee</h5>
+            <p class="card-text">Unleash your inner transformation with the Fly Tee. Featuring a neon cyan butterfly with cyberpunk vibes, this design represents strength, rebirth, and individuality. A standout piece in any wardrobe.</p>
+            <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+            <a href="#order" onclick="addToCart('fly Tee', 999)" class="btn btn-dark">Add to Cart</a>
+          </div>
+        </div>
+      </div> 
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="assets/image/choose happiness.jpg" class="card-img-top" alt="choose happiness Tee">
+          <div class="card-body">
+            <h5 class="card-title">choose happiness Tee</h5>
+            <p class="card-text">Sip joy every day with the Choose Happiness Tee. A cute and playful bubble tea design surrounded by hearts and florals in pastel tones — this is your daily dose of positivity in a t-shirt.</p>
+            <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+            <a href="#order" onclick="addToCart('choose happiness Tee', 999)" class="btn btn-dark">Add to Cart</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="assets/image/keep going.jpg" class="card-img-top" alt="keep going Tee">
+          <div class="card-body">
+            <h5 class="card-title">keep going Tee</h5>
+            <p class="card-text">For the wanderers and dreamers — the Keep Going Tee inspires adventure with a scenic print of a winding trail through mountains under a setting sun. A wearable reminder to keep moving forward.</p>
+            <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+            <a href="#order" onclick="addToCart('keep going Tee', 999)" class="btn btn-dark">Add to Cart</a>
+          </div>
+        </div>
+      </div> 
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="assets/image/nightfall.jpg" class="card-img-top" alt="nightfall Tee">
+          <div class="card-body">
+            <h5 class="card-title">Nightfall Tee</h5>
+            <p class="card-text">Dark, mysterious, and fearless — the Nightfall Tee features a skull pierced by a medieval axe, surrounded by lightning. Perfect for those who embrace their bold side and walk their own path.</p>
+            <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+            <a href="#order" onclick="addToCart('nightfall Tee', 999)" class="btn btn-dark">Add to Cart</a>
+          </div>
+        </div>
+      </div> 
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="assets/image/radiate beauty.jpg" class="card-img-top" alt="radiate beauty Tee">
+          <div class="card-body">
+            <h5 class="card-title">Radiate beauty Tee</h5>
+            <p class="card-text">The Radiate Beauty Tee celebrates divine femininity with a stunning illustrated profile framed by soft florals and the empowering tagline. Crafted to uplift and inspire confidence with every wear.</p>
+            <p><span class="text-decoration-line-through text-muted">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+            <a href="#order" onclick="addToCart('radiate beauty Tee', 999)" class="btn btn-dark">Add to Cart</a>
+          </div>
+        </div>
       </div>   
     
     </div>
