--- a/index.html
+++ b/index.html
@@ -164,6 +164,61 @@
             </div>
           </div>
         </div>
+                <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/Flame Butterfly Tee.png" class="card-img-top" alt="Flame Fly Tee">
+            <div class="card-body">
+              <h5 class="card-title">Flame Fly Tee</h5>
+              <p class="card-text">Tattoo-Inspired. Silent Power.</p>
+              <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('Flame Fly Tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/Oni Mask Tee.png" class="card-img-top" alt="Oni Mask Tee">
+            <div class="card-body">
+              <h5 class="card-title">Oni Mask Tee</h5>
+              <p class="card-text">Dark Aesthetic. Fierce Edge</p>
+              <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('Oni Mask Tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+         <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/Be Kind Tee.png" class="card-img-top" alt="Be Kind Tee">
+            <div class="card-body">
+              <h5 class="card-title">Be Kind Tee</h5>
+              <p class="card-text">Soft Pastels. Radiates Positivity.</p>
+              <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('Be Kind Tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/Stay Wild Tee.png" class="card-img-top" alt="Stay Wild Tee">
+            <div class="card-body">
+              <h5 class="card-title">Stay Wild Tee</h5>
+              <p class="card-text">Earthy Vintage. Bold Spirit.</p>
+              <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('Stay Wild Tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center">
+            <img src="assets/image/bloom and flutter.png" class="card-img-top" alt="bloom and flutter Tee">
+            <div class="card-body">
+              <h5 class="card-title">bloom and flutter Tee</h5>
+              <p class="card-text">Soft Elegance. Quiet Confidence.</p>
+              <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+              <a href="#order" onclick="addToCart('bloom and flutter Tee', 999)" class="btn btn-dark">Add to Cart</a>
+            </div>
+          </div>
+        </div>
           
         <div class="col">
           <div class="card h-100 text-center">
