--- a/premium.html
+++ b/premium.html
@@ -205,6 +205,66 @@
         </div>
       </div>
     </div>
+      <div class="col">
+      <div class="card h-100 text-center">
+        <img src="assets/image/fomo.png" class="card-img-top" alt="fomo">
+        <div class="card-body">
+          <h5 class="card-title">FOMO</h5>
+          <p class="card-text">Missing out was never an option.</p>
+          <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+          <a href="#order" onclick="addToCart('FOMO', 999)" class="btn btn-dark">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100 text-center">
+        <img src="assets/image/dead n drippin.png" class="card-img-top" alt="dead n drippin">
+        <div class="card-body">
+          <h5 class="card-title">Dead n Drippin</h5>
+          <p class="card-text">Low energy. High fashion.</p>
+          <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+          <a href="#order" onclick="addToCart('Dead n Drippin', 999)" class="btn btn-dark">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100 text-center">
+        <img src="assets/image/404 emotionless.png" class="card-img-top" alt="404 emotions not found">
+        <div class="card-body">
+          <h5 class="card-title">404 Emotions Not Found</h5>
+          <p class="card-text">System crashed. Feelings unavailable.</p>
+          <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+          <a href="#order" onclick="addToCart('404 Emotions Not Found', 999)" class="btn btn-dark">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100 text-center">
+        <img src="assets/image/no fear.png" class="card-img-top" alt="no fear">
+        <div class="card-body">
+          <h5 class="card-title">No Fear</h5>
+          <p class="card-text">Courage stitched into every thread.</p>
+          <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+          <a href="#order" onclick="addToCart('No Fear', 999)" class="btn btn-dark">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100 text-center">
+        <img src="assets/image/within you .png" class="card-img-top" alt="within you lives a storm">
+        <div class="card-body">
+          <h5 class="card-title">Within You Lives a Storm</h5>
+          <p class="card-text">Quiet soul. Wild power.</p>
+          <p><span class="text-decoration-line-through" style="color: #fff;">₹1999</span> <span class="fw-bold ms-2">₹999</span></p>
+          <a href="#order" onclick="addToCart('Within You Lives a Storm', 999)" class="btn btn-dark">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+      
 
         <div class="col">
           <div class="card h-100 text-center">
