--- a/index.html
+++ b/index.html
@@ -97,18 +97,10 @@
     </div>
   </nav>
  <div class="marquee" class="scrolling-text-container"><p class="scrolling-text">🚚 Free Shipping All Over India!</p></div>
- <div style="display: flex; align-items: center; justify-content: space-between; background-color: #000; height: 200px; padding: 0 20px;">
-
-    <video src="assets/video/Design 1.mp4" autoplay muted loop style="height: 180px; width: auto; object-fit: cover;"></video>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap">
-    <div style="color: white; text-align: center; font-family: 'Bebas Neue', sans-serif;">
-        <h1 style="font-size: 36px; margin: 0; letter-spacing: 2px;">BUY NOW</h1>
-        <p style="font-size: 18px; margin: 5px 0 0; letter-spacing: 1px;">your story our tee</p>
-    </div>
-
-    <video src="assets/video/design 2.mp4" autoplay muted loop style="height: 180px; width: auto; object-fit: cover;"></video>
-
-</div>
+  <!-- Banner Image -->
+  <div>
+    <img src="assets/Not Just Tees. It’s a Statement..png" alt="Banner" class="img-fluid w-100" style="max-height: 5500px; object-fit: cover;">
+  </div>
   <!--best seller-->
   
   <section class="container py-5">
