--- a/premium.html
+++ b/premium.html
@@ -99,16 +99,17 @@
   </nav>
   <div class="marquee" class="scrolling-text-container"><p class="scrolling-text">🚚 Free Shipping All Over India!</p></div>
   <!-- Banner Image -->
-    <div style="display:flex; flex-wrap:wrap; align-items: center; justify-content: space-between; background-color: #000; height: 200px; padding: 0 20px;">
 
-    <video src="assets/video/Design 1.mp4" autoplay muted loop style="flex:1 1 200px; max-width:30%; height:auto; width: auto; object-fit: cover;"></video>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap">
-    <div style="color: white; text-align: center; font-family: 'Bebas Neue', sans-serif;">
-        <h1 style="font-size: 36px; margin: 0; letter-spacing: 2px;">BUY NOW</h1>
-        <p style="font-size: 18px; margin: 5px 0 0; letter-spacing: 1px;">your story our tee</p>
+  <div style="display:flex; flex-wrap:wrap; align-items:center; justify-content:center; background-color:#000; padding:10px;">
+
+    <video src="assets/video/design 2.mp4" autoplay muted loop style="flex:1 1 200px; max-width:30%; height:auto; object-fit:cover; margin:5px;"></video>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap">
+    <div style="flex:1 1 300px; color:white; text-align:center; 'Bebas Neue', sans-serif;" margin:10px;">
+        <h1 style="font-size:5vw; margin:0; letter-spacing:1px;">BUY NOW</h1>
+        <p style="font-size:3.5vw; margin:5px 0 0;">your story our tee</p>
     </div>
 
-    <video src="assets/video/design 2.mp4" autoplay muted loop style="flex:1 1 200px; max-width:30%; height:auto; width: auto; object-fit: cover;"></video>
+    <video src="assets/video/design 2.mp4" autoplay muted loop style="flex:1 1 200px; max-width:30%; height:auto; object-fit:cover; margin:5px;"></video>
 
 </div>
    <section id="premium" class="py-5">
