--- a/premium.html
+++ b/premium.html
@@ -976,6 +976,8 @@
 <script>
 let cart = [];
   let couponApplied = false;
+  let couponApplied30 = false;
+  let coupon900 = false;
 
   function addToCart(productName, price) {
     cart.push({ productName, price });
@@ -1125,5 +1127,6 @@ let cart = [];
 
 </body>
 </html>
+
 
 
