--- a/premium.html
+++ b/premium.html
@@ -936,7 +936,7 @@ let cart = [];
     const code = document.getElementById("coupon").value.trim();
     const message = document.getElementById("coupon-message");
     const validCodes = ["chiya900", "allex", "nitesh", "ashish", "manish",
-  "manav", "rhea", "divi", "simran", "kuku", "srishti", "mili"];
+  "manav", "rhea", "divi", "simran", "kuku", "srishti", "mili","rohit"];
 
     if (code === "SAVE10" && !couponApplied) {
       couponApplied = true;
@@ -1029,4 +1029,5 @@ let cart = [];
 
 </body>
 </html>
+
 
